# openvals

./: .gitignore  MANIFEST.in  README.md  docs_structure.txt  pyproject.toml  setup.py  test_dataset_loader.py
docs/: core-concepts.html  examples.html  getting-started.html  index.html  roadmap.html
docs/api/: benchmarking.html  datasets.html  evaluator.html  metrics.html  models.html  recommendation.html  reporting.html  scoring.html
docs/css/: styles.css
docs/guides/: cli.html  custom-metrics.html  custom-model.html
docs/js/: app.js  search-index.js
examples/: run_benchmark.py
openvals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
openvals/benchmarking/: normalization.py
openvals/cli/: app.py
openvals/config/: defaults.py  loader.py
openvals/config/presets/: developer.yaml  finance.yaml  healthcare.yaml  legal.yaml
openvals/core/: evaluator.py
openvals/datasets/: __init__.py  loader.py  metadata.py  registry.py
openvals/datasets/dev/: __init__.py  advanced.json  dataset.json
openvals/datasets/finance/: __init__.py  advanced.json  dataset.json
openvals/datasets/healthcare/: __init__.py  advanced.json  dataset.json
openvals/datasets/legal/: __init__.py  advanced.json  dataset.json
openvals/datasets/sample/: __init__.py  dataset.json  sample_eval.json
openvals/metrics/: embeddings.py  reliability.py  safety.py  semantic.py  similarity.py
openvals/reporting/: html_report.py
openvals/safety/: jailbreak.py  keywords.py  safety_engine.py  toxicity.py
