[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvals"
version = "0.1.5"

description = "Open source AI evaluation, validation, benchmarking, recommendation engine and trust layer for LLMs"

readme = "README.md"

requires-python = ">=3.8"

license = { text = "MIT" }

authors = [
    { name = "Vishwanath Akuthota" }
]

keywords = [
    "AI evaluation",
    "LLM benchmarking",
    "model validation",
    "AI safety",
    "AI reliability",
    "LLM testing",
    "AI metrics",
    "machine learning evaluation",
    "AI benchmarking tools",
    "OpenAI evaluation",
    "Ollama benchmarking",
    "Claude evaluation",
    "Gemini AI testing",
    "Vishwanath Akuthota"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing"
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "pyyaml>=6.0"
    "sentence-transformers>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/vishwanathakuthota/openvals"
Documentation = "https://docs.openvalidations.com"
Source = "https://github.com/vishwanathakuthota/openvals"

[project.scripts]
openvals = "openvals.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openvals*"]

[tool.setuptools.package-data]
openvals = [
    "datasets/**/*.json",
    "config/presets/*.yaml"
]